dark mode added ui fixed,

--- a/Day46_04.04/task/style.scss
+++ b/Day46_04.04/task/style.scss
@@ -42,9 +42,9 @@ nav{
     // flex-direction: column;
     // align-items: center;
     // justify-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
     gap: 3rem;
-    justify-items: center;
+    justify-content: center;
     align-items: center;
     padding: 2rem;
     .card{
